[package]
name = "shared_vector"
version = "0.1.1"
edition = "2021"
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/shared_vector"
documentation = "https://docs.rs/shared_vector/"
keywords = ["vector", "immutable"]
license = "MIT OR Apache-2.0"
description = "Reference counted vector data structure."

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "vector"
harness = false

[profile.release]
debug = true

[dependencies]
allocator-api2 = "0.2.4"
