[package]
name = "shared_vector"
version = "0.4.2"
edition = "2021"
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/shared_vector"
documentation = "https://docs.rs/shared_vector/"
keywords = ["vector", "immutable"]
license = "MIT OR Apache-2.0"
description = "Reference counted vector data structure."

[dev-dependencies]
criterion = "0.4"
blink-alloc = "0.2.5"

[[bench]]
name = "vector"
harness = false

[profile.release]
debug = true

[dependencies]
allocator-api2 = "0.2.4"

[features]
default = ["std"]
nightly = ["allocator-api2/nightly", "blink-alloc/nightly"]
std = ["allocator-api2/std"]
